# linuxauditmgr

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  license.txt  linuxauditmgr.desktop  linuxauditmgr.desktop.in  org.radiotube.linuxauditmgr.policy.in
src/: App.cpp  AppArmorDenials.cpp  AppArmorDenials.h  AppArmorDenialsPanel.cpp  AppArmorDenialsPanel.h  AppArmorEditor.cpp  AppArmorEditor.h  AppArmorEventsPanel.cpp  AppArmorEventsPanel.h  AppArmorNormalizer.cpp  AppArmorNormalizer.h  AppArmorPanel.cpp  AppArmorPanel.h  AppArmorParser.cpp  AppArmorParser.h  AppArmorTab.cpp  AppArmorTab.h  AppArmorValidationPanel.cpp  AppArmorValidationPanel.h  AppArmorValidator.cpp  AppArmorValidator.h  AuditParser.cpp  AuditParser.h  LogTailer.cpp  LogTailer.h  MainFrame.cpp  MainFrame.h  RuleHitsPanel.cpp  RuleHitsPanel.h  icon_svg.h.in
tests/: fixtures.h  test_apparmor.cpp  test_apparmor_denials.cpp  test_apparmor_editor.cpp  test_apparmor_normalizer.cpp  test_apparmor_validator.cpp  test_parser.cpp  test_tailer.cpp
